--- a/docker-compose.wp.yml
+++ b/docker-compose.wp.yml
@@ -9,24 +9,45 @@ services:
       - MYSQL_ROOT_PASSWORD=Admin123
       - MYSQL_USER=bn_wordpress
       - MYSQL_PASSWORD=1
-      - MYSQL_DATABASE=wordpress
+      - MYSQL_DATABASE=giant
+    entrypoint:
+      sh -c "
+        echo 'CREATE DATABASE IF NOT EXISTS vesta;' > /docker-entrypoint-initdb.d/init.sql;
+        /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      "
 
-  wordpress:
+  giant_wp:
     image: wordpress:6.4.2-php8.1-apache
     ports:
       - '8080:80'
     volumes:
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
-      - wordpress_data:/var/www/html
+      - giant_data:/var/www/html
     depends_on:
       - db
     environment:
       - WORDPRESS_DB_HOST=db
-      - WORDPRESS_DB_USER=bn_wordpress
-      - WORDPRESS_DB_PASSWORD=1
-      - WORDPRESS_DB_NAME=wordpress
+      - WORDPRESS_DB_USER=root
+      - WORDPRESS_DB_PASSWORD=Admin123
+      - WORDPRESS_DB_NAME=giant
+
+  vesta_wp:
+    image: wordpress:6.4.2-php8.1-apache
+    ports:
+      - '8081:80'
+    volumes:
+      - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - vesta_data:/var/www/html
+    depends_on:
+      - db
+    environment:
+      - WORDPRESS_DB_HOST=db
+      - WORDPRESS_DB_USER=root
+      - WORDPRESS_DB_PASSWORD=Admin123
+      - WORDPRESS_DB_NAME=vesta
 
 volumes:
   db_data:
-  wordpress_data:
+  giant_data:
+  vesta_data:
   
